--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 
 /* HARI BESAR */
 #hariBesarBox{
+  display: none;
   background:rgba(0,0,0,.55);
   padding:12px 14px;
   border-radius:12px;
@@ -325,22 +326,22 @@ const hijriMonths = [
   "Syawal","Dzulqaidah","Dzulhijjah"
 ];
 
-const d = new Date();
+let today = new Date();
 
-const fmt = new Intl.DateTimeFormat(
-  'id-US-u-ca-islamic-umalqura',
-  { day:'numeric', month:'numeric', year:'numeric', weekday:'long' }
-);
 
-const parts = fmt.formatToParts(d);
-const day = parts.find(p=>p.type==='day').value;
-const month = parts.find(p=>p.type==='month').value;
-const year = parts.find(p=>p.type==='year').value;
-const weekday = parts.find(p=>p.type==='weekday').value;
+today.setDate(today.getDate() - 1);
 
-document.getElementById("hijriDisplay").innerHTML =
-  `${day} ${hijriMonths[month-1]} ${year} H`;
+// format hijriyah
+let hijri = new Intl.DateTimeFormat("id-ID-u-ca-islamic-umalqura", {
+  day: "numeric",
+  month: "long",
+  year: "numeric"
+}).format(today);
+
+document.getElementById("hijriDisplay").innerHTML = hijri;
+
 },1000)  
+  
 
 
 
