--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@ th,td{
 </div>
 
 <!-- ================= DATA SHOLAT ================= -->
-<script src="script.js"></script>
+<script src="data.js"></script>
 
 <script>
-/* UPDATE JADWAL DARI script.js */
+/* UPDATE JADWAL DARI data.js */
 const ids = ["imsak","subuh","dzuhur","ashar","maghrib","isya"];
 
 const updateJadwalHTML = () => {
