--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 #headerBox{
   width:100%;
-  max-width:100vw;
+  max-width:100%;
   margin:0 auto 20px;
   padding:0 20px;          
   text-align:center;
