--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ updateHariBesar()
 
 
 /* BACKGROUND SLIDE */
-const bg=["nabawi1.jpg","masjid2.jpg"]
+const bg=["masjid2.jpg"]
 let i=0
 setInterval(()=>{
   document.body.style.backgroundImage=`url('${bg[i]}')`
